[package]
name = "updater"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
console = "0.15.8"
hex = "0.4.3"
indicatif = "0.17.8"
md-5 = "0.10.6"
reqwest = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = "1.37.0"
trauma = "2.2.4"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
